test/compile_errors/stage1/obj/reify_type_union_payload_is_undefined.zig
const Foo = @Type(.{
    .Struct = undefined,
});
comptime { _ = Foo; }

// @Type() union payload is undefined
//
// tmp.zig:1:20: error: use of undefined value here causes undefined behavior
